--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/DajSpisacTheme" >
+        android:theme="@style/DajSpisacTheme"
+        android:name="com.swmansion.dajspisac.application.DajSpisacApplication">
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
